# MLMT

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  velocity_model.nd
sbi_mt/: __init__.py  data.py  evaluate.py  forward.py  gf.py  inference.py  model.py  plots.py  synth.py  train.py
scripts/: 01_build_gf_store.py  02_build_noise_library.py  03_generate_training_data.py  04_train.py  05_run_inference.py  06_benchmark_vs_grond.py  07_make_figures.py
tests/: conftest.py  test_evaluate.py  test_flow_shapes.py  test_forward_vs_pyrocko.py  test_inference.py  test_plots.py  test_synth_data.py  test_train_overfit.py  test_wls_recovers_mt.py
